--- a/hygrapher/pyproject.toml
+++ b/hygrapher/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "hygrapher"
-version = "0.4.0"
+version = "0.5.2"
 authors = [
   { name="HiroYokoyama", email="titech.yoko.hiro@gmail.com" },
 ]
@@ -21,11 +21,9 @@ dependencies = [
     "pandas",
     "matplotlib",
     "tksheet",
-    "openpyxl", 
+    "openpyxl",
+    "tkinterdnd2",
 ]
-
-[project.optional-dependencies]
-dnd = ["tkinterdnd2"]
 
 [project.urls]
 Homepage = "https://github.com/HiroYokoyama/matplotlib_graph_app"
@@ -33,4 +31,5 @@ Issues = "https://github.com/HiroYokoyama/matplotlib_graph_app/issues"
 
 [project.scripts]
 hygrapher = "hygrapher.__main__:main"
+hygrapher-3d = "hygrapher.main_3d:main"
 
